--- a/app/src/main/res/layout/home_page_item_card.xml
+++ b/app/src/main/res/layout/home_page_item_card.xml
@@ -12,11 +12,11 @@
 
     <ImageView
         android:id="@+id/service_icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
         />
 
     <TextView
@@ -26,8 +26,7 @@
         android:text="service name"
         android:textStyle="bold"
         android:textColor="@color/titleColor"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:paddingBottom="10dp"
         android:maxLines="2"
         android:gravity="center"/>
 
