--- a/app/src/main/res/layout/save_user_phone_number.xml
+++ b/app/src/main/res/layout/save_user_phone_number.xml
@@ -28,6 +28,8 @@
                 android:layout_height="match_parent"
                 >
 
+                <include layout="@layout/app_update_and_contactus_text"></include>
+
                 <RelativeLayout
                     android:id="@+id/phone_number_label_layout"
                     android:layout_width="match_parent"
@@ -227,7 +229,7 @@
                         android:layout_marginTop="30dp"
                         android:layout_marginBottom="80dp"
                         android:layout_centerInParent="true"
-                        android:background="#3F51B5"
+                        android:background="#325C80"
                         android:elevation="20dp"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
