--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -6,17 +6,45 @@
     android:background="#F2F2F2"
     >
 
-    <include layout="@layout/custom_toolbar"></include>
+    <include layout="@layout/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        ></include>
 
-    <include layout="@layout/app_update_and_contactus_text"></include>
+    <include layout="@layout/app_update_and_contactus_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/app_update_text_layout"
+        android:layout_below="@id/toolbar"
+        ></include>
 
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/app_update_text_layout"
+        >
+    <GridView
         android:id="@+id/home_page_grid_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:numColumns="3"
         android:verticalSpacing="3dp"
         android:horizontalSpacing="3dp"
-        android:gravity="center"
+        android:gravity="top"
         />
-</LinearLayout>
+
+    </RelativeLayout>
+    <TextView
+        android:id="@+id/contact_us_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="For immediate response \ncall 080 4123 9459 \nEmail:  info@drchip.in"
+        android:textSize="16sp"
+        android:layout_marginTop="5dp"
+        android:padding="5dp"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/white"
+        />
+</RelativeLayout>
