--- a/app/src/main/res/layout/home_page_item_card.xml
+++ b/app/src/main/res/layout/home_page_item_card.xml
@@ -12,9 +12,9 @@
 
     <ImageView
         android:id="@+id/service_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@mipmap/moniter"
         android:layout_gravity="center"
         android:paddingTop="10dp"
         />
