some UI changes

--- a/app/src/main/res/layout/app_update_and_contactus_text.xml
+++ b/app/src/main/res/layout/app_update_and_contactus_text.xml
@@ -16,6 +16,7 @@
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:background="#dcff00"
+        android:visibility="invisible"
         />
 
 </LinearLayout>
