--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -41,11 +41,11 @@
         android:layout_height="wrap_content"
         android:text="For immediate response \ncall 080 4123 9459 \nEmail:  info@drchip.in"
         android:textSize="14sp"
-        android:textColor="#dcff00"
+        android:textColor="@android:color/white"
         android:layout_marginTop="5dp"
         android:padding="15dp"
         android:gravity="center"
         android:layout_alignParentBottom="true"
-        android:background="@mipmap/contactus_bg"
+        android:background="#2B4F6F"
         />
 </RelativeLayout>
