--- a/app/src/main/res/layout/save_user_phone_number.xml
+++ b/app/src/main/res/layout/save_user_phone_number.xml
@@ -84,7 +84,7 @@
                         android:textColorHint="#ADADAD"
                         android:textSize="18sp"
                         android:layout_gravity="center"
-                        editTextFormExample:testType="numeric"
+                        android:inputType="number"
                         />
                     </LinearLayout>
                     <RelativeLayout
@@ -236,11 +236,10 @@
                     >
                 <Button
                     android:id="@+id/submit_button"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="80dp"
                     android:background="#325C80"
                     android:elevation="20dp"
                     android:paddingLeft="10dp"
@@ -248,25 +247,27 @@
                     android:text="Submit"
                     android:textColor="#ffffff"
                     android:textSize="18sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     />
+
+                    <TextView
+                        android:id="@+id/contact_us_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="For immediate response \ncall 080 4123 9459 \nEmail:  info@drchip.in"
+                        android:textSize="14sp"
+                        android:layout_marginTop="5dp"
+                        android:paddingBottom="15dp"
+                        android:paddingTop="5dp"
+                        android:gravity="center"
+                        android:layout_alignParentBottom="true"
+                        android:layout_below="@id/submit_button"
+                        />
                 </RelativeLayout>
             </RelativeLayout>
 
-
         </RelativeLayout>
     </ScrollView>
-    <TextView
-        android:id="@+id/contact_us_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="For immediate response \ncall 080 4123 9459 \nEmail:  info@drchip.in"
-        android:textSize="14sp"
-        android:textColor="#dcff00"
-        android:layout_marginTop="5dp"
-        android:paddingBottom="15dp"
-        android:paddingTop="5dp"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:background="@mipmap/contactus_bg"
-        />
+
 </RelativeLayout>
