--- a/app/src/main/res/layout/home_page_item_card.xml
+++ b/app/src/main/res/layout/home_page_item_card.xml
@@ -12,8 +12,8 @@
 
     <ImageView
         android:id="@+id/service_icon"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@mipmap/moniter"
         android:layout_gravity="center"
         android:paddingTop="10dp"
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="service name"
-        android:textStyle="bold"
+        android:textSize="12sp"
         android:textColor="@color/titleColor"
         android:paddingBottom="10dp"
         android:maxLines="2"
