--- a/app/src/main/res/layout/home_page_item_card.xml
+++ b/app/src/main/res/layout/home_page_item_card.xml
@@ -14,7 +14,7 @@
         android:id="@+id/service_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/moniter"
+        android:src="@mipmap/computer_service"
         android:layout_gravity="center"
         android:paddingTop="10dp"
         />
